--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Founded in 2017, Redirect is a Macau-based hospitality company. Our goal is to provide our customers with products & services of superior quality and value. </div>
+                <div class="masthead-subheading">Founded in 2017, Redirect is a Macau-based company with the goal to provide our clients with innovative products & services. </div>
                 <div class="masthead-heading text-uppercase"> </div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Our Services</a>
             </div>
@@ -49,24 +49,24 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Providing brilliant ideas for your business.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lightbulb fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-gift fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Product Solution</h4>
-                        <p class="text-muted">Tailored solutions that are designed and built with an eye to the future in order to generate ongoing values to our clients.</p>
+                        <h4 class="my-3">Souvenir Design</h4>
+                        <p class="text-muted">Tailored souvenir solutions that are designed and built with an eye to the future in order to generate ongoing values to our clients. </p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-ad fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-microscope fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Branding & Marketing</h4>
-                        <p class="text-muted">Not only can we promote your products and services, we are here to grow your business strategically by creating a unique brand image.</p>
+                        <h4 class="my-3">3D Modeling & Printing</h4>
+                        <p class="text-muted"> A one-stop-shop for efficieny and precise 3D design and printing services. Whether it be single  prototypes or thousands of production parts, we can make it happen for you.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -84,7 +84,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Action creates momentum, momentum creates results.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -97,7 +97,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Macoin</div>
-                                <div class="portfolio-caption-subheading text-muted">Coin Press Machines</div>
+                                <div class="portfolio-caption-subheading text-muted">Citywide coin press machine network</div>
                             </div>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Oloiya</div>
-                                <div class="portfolio-caption-subheading text-muted">High quality dried meat</div>
+                                <div class="portfolio-caption-subheading text-muted">High quality Malaysian dried meat</div>
                             </div>
                         </div>
                     </div>
@@ -152,8 +152,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Renova</div>
-                                <div class="portfolio-caption-subheading text-muted">Premium tissue and toilet paper</div>
+                                <div class="portfolio-caption-heading">Sembly</div>
+                                <div class="portfolio-caption-subheading text-muted">One-stop-shop 3D design & printing</div>
                             </div>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">STEM Toys</div>
-                                <div class="portfolio-caption-subheading text-muted">Fun yet educational toys for kids</div>
+                                <div class="portfolio-caption-subheading text-muted">Innovative educational toys for kids</div>
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Jan 2017</h4>
+                                <h4>January 2017</h4>
                                 <h4 class="subheading">Beginning</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Given the background and knowledge, the duo set their eyes on the tourism and hospitality industry when it comes to establishing their own business. The name Redirect reflects the company mission: to provide products or services that are often overlooked by the market.</p></div>
@@ -216,10 +216,21 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Feb 2019 </h4>
+                                <h4>Feburary 2019 </h4>
                                 <h4 class="subheading">Collabs and Expansions</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">After the success of Macoin, the company started to explore other business opportunities, partnered up with renowned brands to bring their products to Macau. Their extended client list includes Sands China, Galaxy Macau, Studio City, Macau Tower, Macau Government Tourism Office, as well as Macau Science Center.</p></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/5.jpg" alt="" /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>May 2021</h4>
+                                <h4 class="subheading">Sembly Debut</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">during the global pandemic, almost all businesses were affected. We decided to embark on a new adventure: 
+                            3D-printing services. In the 2nd half of 2021, We've collaberated with Galaxy Entertainment Group and Macau Science Center in bringing some interesting 3D-printed products to the market, which both were well received!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -244,36 +255,36 @@
                     <h3 class="section-subheading text-muted">Where creativity meets dedication</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
                             <h4>Kelvin U</h4>
-                            <p class="text-muted">Co-Founder & Lead Marketer</p>
+                            <p class="text-muted">Co-Founder</p>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kelvin-u-909b17b9/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
                             <h4>Lam Lei</h4>
-                            <p class="text-muted">Co-Founder & Lead Designer</p>
+                            <p class="text-muted">Co-Founder</p>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/lamlei/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
                             <h4>JoJo Wong</h4>
                             <p class="text-muted">Finance Manager</p>
-                            <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
- -->                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/MacoinOfficial"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> Our team is a tight-knit, talented group with a shared vision of delivering consistently great results for our clients, as well as ensuring the company is a fun yet challenging place to work.</p></div>
@@ -521,10 +532,11 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Renova</h2>
-                                    <p class="item-intro text-muted">The Sexiest Paper On Earth</p>
+                                    <h2 class="text-uppercase">Sembly 3D-Printing</h2>
+                                    <p class="item-intro text-muted">The fusion of technology, aesthetic and imaginations</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>Renova is an European brand of high quality and innovative products. Available in more than 60 countries worldwide, it offers colourful designs and new functional solutions through stylish and environmentally happy products. In the beginning of the millennium, Renova launched the first range of paper products certified with the European Union Ecolabel. Renovagreen are products manufactured with 100% recycled paper, emphasizing a solid strategy regarding the environment. More recently, the brand launched a range of products with paper packaging, biodegradable and recyclable, replacing plastic, in response to a growing expectation of citizens around the world.</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full2.jpg" alt="" />
+                                    <p>Sembly™ is a brand of 3d design & printing services. Behind each design is much thoughts with countless hours of and trial and error. They are then crafted in our workshop with 3D printers with careful inspection. </p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
                                         <li>Client: Southwest</li>
@@ -554,6 +566,7 @@
                                     <h2 class="text-uppercase">STEM Toys</h2>
                                     <p class="item-intro text-muted">Let kids learn while they play</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full2.jpg" alt="" />
                                     <p>Combining playtime with education is a fun way for kids to learn. So what better way to do that than with STEM toys? Help your kids stay relevant in a tech-savvy world by giving them fun STEM toys, that increases their engagement in science, technology, engineering and math. Our collection is packed with dozens of fascinating and fun products that focus on one or more of these subject areas. These hands-on games are perfect for kids of all ages, and are a surefire entertaining way to encourage exploration and problem solving.</p>
 <!--                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
