--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
                     <h5 class="text-white font-weight-light">info@redirectlimited.com</h5>
                     <h5 class="text-white font-weight-light">+853 6343 8505</h5>
-                    <h6 class="text-white font-weight-light">Avenida Da Praia Grande No. 429 Centro Comercial Praia Grande 20E, Macau SAR</h6>
+                    <h6 class="text-white font-weight-light">Alameda Dr. Carlos d'Assumpção, nos 335-341, Edifício "Hot Line", 4 andar R, Macau SAR</h6>
                 </div>
                 <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
